@@ -36,7 +36,7 @@ class CodecNull : public Codec
   void process(const QByteArray &data,bool is_last);
 
  protected:
-  void loadStats(QStringList *hdrs,QStringList *values);
+  void loadStats(QStringList *hdrs,QStringList *values,bool is_first);
 };
 
 
