@@ -40,7 +40,7 @@ class Hls : public Connector
  protected:
   void connectToHostConnector();
   void disconnectFromHostConnector();
-  void loadStats(QStringList *hdrs,QStringList *values);
+  void loadStats(QStringList *hdrs,QStringList *values,bool is_first);
 
  private slots:
   void indexProcessStartData();
