@@ -107,8 +107,10 @@ void DevStdout::synchronousWrite(unsigned frames,bool is_last)
 }
 
 
-void DevStdout::loadStats(QStringList *hdrs,QStringList *values)
+void DevStdout::loadStats(QStringList *hdrs,QStringList *values,bool is_first)
 {
-  hdrs->push_back("Device|Type");
-  values->push_back("STDOUT");
+  if(is_first) {
+    hdrs->push_back("Device|Type");
+    values->push_back("STDOUT");
+  }
 }
