@@ -37,7 +37,7 @@ class DevStdout : public AudioDevice
    void synchronousWrite(unsigned frames,bool is_last);
 
  protected:
-  void loadStats(QStringList *hdrs,QStringList *values);
+   void loadStats(QStringList *hdrs,QStringList *values,bool is_first);
 
  private:
   AudioDevice::Format stdout_format;
