@@ -194,3 +194,6 @@
 	* Got glassplayergui(1) working with XCast servers.
 2016-02-11 Fred Gleason <fredg@paravelsystems.com>
 	* Enumerated exit error codes in 'src/common/glasslimits.h'.
+2016-02-11 Fred Gleason <fredg@paravelsystems.com>
+	* Optimized the stats interface to send updates only when values
+	change.
